small css fix for code blocks in dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.nuxt-content {
+    /* Force style on pre elements */
+    & pre[class*="language-"] {
+      /* Make pre static so the relative goes to the parent (.nuxt-content-highlight) */
+      @apply bg-gray-800 static;
+    }
+}
+
+.dark .nuxt-content-editor {
+  @apply bg-gray-800;
+}
+
